Mejorar la configuración de CORS y la autenticación JWT; permitir métodos adicionales y exponer encabezados, además de optimizar la carga de usuarios por email o nombre de usuario.